fix: mudança corrigida e funcional, precisa apenas de conserto de detalhes e refatorações.